app/styles/main.css
body, html {
	height: 100%;
	width: 100%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-overflow-scrolling: touch;
	background-color: #3D4044;
	-webkit-transition: background-color 0.6s ease-in-out 0s;
  transition: background-color 0.6s ease-in-out 0s;
}

.select-wrapper select {
  background-color: transparent !important;
  width: 100%;
  line-height: 20px;
  padding: 5px;
  font-size: 12px;
  border: 0;
  border-radius: 0;
  -moz-appearance: none;
  -webkit-appearance: none;
  color: #000;
  outline: none;
  border: none !important;
  -webkit-box-shadow: none !important;
  -moz-box-shadow: none !important;
  box-shadow: none !important;  
  cursor: pointer;
}

.open-heading .panel-heading{
  background-color: #008093 !important;
}

.select-wrapper {
  width: 100%;
  overflow: hidden;
  background: url("../images/downArrow.png") no-repeat right #fff;
  background-position-x: 95%;
  -moz-background-position-x: 95%;  
  padding: 0;
  cursor: pointer;
}

.page-header {
  margin-top: 10px;
  margin-bottom: 10px;
  padding: 0;
}

.lead {
  margin-top: 10px;
  margin-bottom: 10px;
}


.accordion-toggle .icon {
	vertical-align: bottom;
}

.accordion-toggle .icon {
	margin-right: .5em;
}

.wrapper {
	height: 100%;
	width: 100%;
	overflow: hidden;
	position: fixed;
}
#loading-bar-spinner {
	right: 10px;
	left: auto;
}
app-header {
  overflow: hidden;
}

.btn {
  border-radius: 0;
}

.navbar-brand {
	float: left;
height: 50px;
padding: 15px 15px;
font-size: 18px;
line-height: 20px;
color: #fff;
text-decoration: none;
font-weight: normal;
/* text-transform: uppercase; */
letter-spacing: 0.4em;
-webkit-transition: letter-spacing 0.5s;
transition: letter-spacing 0.5s;
font-size: 2em;
font-weight: bold;
}

.navbar-brand:hover {
	letter-spacing: 0.2em;
}
disclaimer blockquote {
	border: none;
}

disclaimer img {
	margin: 20px;
}

feedback textarea {
	max-width: 100%;
	max-height: 500px;
}

.modal .glyphicon {
	color: white;
}

.form-control {
	background-color: rgb(60, 60, 60) !important;
  color: white !important;
  border-radius: 0;
  border-color: rgb(204, 204, 204);
}

.twitterTypeahead {
  border: none;
}

.input-group {
  border: solid rgb(204, 204, 204) 1px;
}

.navbar {
	margin-bottom: 0;
  background-color: #222;


}

.modal-content {
	background-color: rgb(60,60,60);
	color: white;
}

.panel-group .panel + .panel {
	margin-top:0 !important;
}


#map {
	background-color: black;
	position: fixed;
	top:52px;
	bottom: 0;
	right: 0;
	left: 0;

}


#loadingBackground {
		position: absolute;
		top: 0;
		left: 0;
		bottom: 0;
		right: 0;
		margin: auto auto;
		-webkit-user-select: none;
		-moz-user-select: none;
		-ms-user-select: none;
		user-select: none;
		background-color: #3D4044;
	z-index: 10000;
}
#loading {
	width: 60px;
		height: 60px;
		position: absolute;
		top: 0;
		left: 0;
		bottom: 60px;
		right: 0;
		margin: auto auto;
		-webkit-user-select: none;
		-moz-user-select: none;
		-ms-user-select: none;
		user-select: none;
		background-color: #3D4044;
	z-index: 10000;
}

.spinner {
	width: 40px;
	height: 40px;

	position: relative;
	margin: auto auto;
}

.double-bounce1, .double-bounce2 {
	width: 100%;
	height: 100%;
	border-radius: 50%;
	background-color: #fff;
	opacity: 0.6;
	position: absolute;
	top: 0;
	left: 0;

	-webkit-animation: bounce 2.0s infinite ease-in-out;
	animation: bounce 2.0s infinite ease-in-out;
}

.double-bounce2 {
	-webkit-animation-delay: -1.0s;
	animation-delay: -1.0s;
}

@-webkit-keyframes bounce {
	0%, 100% { -webkit-transform: scale(0.0) }
	50% { -webkit-transform: scale(1.0) }
}

@keyframes bounce {
	0%, 100% {
		transform: scale(0.0);
		-webkit-transform: scale(0.0);
	} 50% {
		transform: scale(1.0);
		-webkit-transform: scale(1.0);
	}
}

#loading img{
	text-align: center;
  position: relative;
  top: 10px;
  height: 80px;
  left: -5px;
  -webkit-filter: drop-shadow(0px 0px 2px rgba(255,255,255,1));
}

/*hyperlinks*/
.ps-link, .ps-link:active, .ps-link:visited {
	color: rgb(0, 137, 255);
}

.ps-link:hover {
	color: yellow;
}

/*BootStrap overwrites*/
/*buttons*/
.btn-group {
  z-index: 1000;
}
.btn-default, .btn-default:active, .btn-default:focus {
  background-color: transparent;
  color: white;
}

.btn-default:hover, .btn-default.active {
	background-color: rgb(60, 60, 60) !important;
	border-color: rgba(71,151,220,1) !important;
	color: rgba(71,151,220,1) !important;
}

.btn-default.disabled, .btn-default[disabled] {
	color: #fff;
	background-color: black;
	opacity: 0.1;
}

.glyphicon.highlighted{
  -moz-text-shadow: 0 0 16px rgba(71,151,220,1),0 0 16px rgba(0, 137, 255, 1),0 0 16px rgba(0, 137, 255, 1);
  text-shadow: 0 0 16px rgba(71,151,220,1),0 0 16px rgba(0, 137, 255, 1),0 0 16px rgba(0, 137, 255, 1);
}

/*map panels*/
.collapse-header {
  color: white;
  font-size: 16pt;
  font-weight: normal;
  margin: 1em;
  cursor: pointer;
}

.collapse-header .glyphicon{
  color: white;
  margin-right: 10px;
  font-size: 16pt;
}


.collapse-panel {
  color: white;
    overflow: hidden;
    transition-duration: 0.5s; -webkit-transition-duration: 0.5s; transition-property: width, height; -webkit-transition-property: width, height;
}

/*basemap panel*/
base-map-panel {
  position: absolute;
  top: 52px;
  right:300px;
  z-index: 100;
  background-color: rgba(60,60,60,0.8);
  border-radius: 0;
  transition-property: right;
  transition: 0.5s;
    -moz-box-shadow: 0 0 16px rgba(0,0,0,0.8);
  box-shadow: 0 0 16px rgba(0,0,0,0.8);
  padding: 4px 0 4px 0;
}
.selected-basemap img{
  -moz-box-shadow: 0px 0px 23px 0px rgba(71,151,220,1);
  box-shadow: 0px 0px 23px 0px rgba(71,151,220,1);
}
.basemap-type img{
  margin: 10px;
  width: 76px;
  height: 51px;
}
base-map-panel .collapse-panel {
  padding: 0;
}
base-map-panel .collapse-panel.collapsed {
  padding: 0 10px 10px 10px;
  height: 200px;
}
.basemap-type {
  cursor: pointer;
}
/* ... */

